--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load staticfiles i18n tz counter assign %}
+{% load staticfiles i18n tz %}
 {% localtime on %}
     {% get_current_timezone as TIME_ZONE %}
     {% if user.is_authenticated %}
