--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles is_active i18n tz counter assign cookielaw_tags%}
+{% load staticfiles i18n tz cookielaw_tags%}
 {% localtime on %}
 {% get_current_timezone as TIME_ZONE %}
 <!DOCTYPE html>
