--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles i18n tz cookielaw_tags%}
+{% load staticfiles i18n tz%}
 {% localtime on %}
 {% get_current_timezone as TIME_ZONE %}
 <!DOCTYPE html>
@@ -45,66 +45,15 @@
         <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
         <meta name="msapplication-config" content="images/browserconfig.xml">
         <meta name="theme-color" content="#00afef">
-        {% cookielaw_banner %}
 		{% block header %}{% endblock %}
 	</head>
-    {% load tz_detect %}
-    {% tz_detect %}
 
     <body>
         <nav class="navbar fixed-top navbar-toggleable-md navbar-light" style="background-color: #e3f2fd;" id="myNavbar">
             <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'portfolio' %}"><img src="{% static 'images/Logo_MyMensor_NEW3.svg' %}" width="46" height="46" alt=""></a>
-            <div id="navbarNavDropdown" class="collapse navbar-collapse">
-                <ul class="navbar-nav">
-                    {% if user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link {% is_active request 'portfolio' %}" href="{% url 'portfolio' %}">{% trans "Portfolio" %}</a></li>
-                        <li class="nav-item"><a class="nav-link {% is_active request 'vpdetail' %}" href="{% url 'vpdetail' %}">{% trans "Media" %}</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                {% trans "Data" %}
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="{% url 'tagstatus' %}">{% trans "Status" %}</a>
-                                <a class="dropdown-item" href="{% url 'taganalysis' %}">{% trans "Analysis" %}</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{% url 'tagprocessing' %}">{% trans "Processing" %}</a>
-                                <a class="dropdown-item" href="{% url 'proctagedit' %}">{% trans "Edit" %}</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                {% trans "Setup" %}
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="{% url 'assetsetup' %}">{% trans "Asset" %}</a>
-                                <a class="dropdown-item" href="{% url 'vpsetup' %}">{% trans "VPs" %}</a>
-                                <a class="dropdown-item" href="{% url 'tagsetup' %}">{% trans "TAGs" %}</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{% url 'mobilebackup' %}">{% trans "Mobile Backup" %}</a>
-                            </div>
-                        </li>
-                    {% else %}
-                        <li class="nav-item"><a class="nav-link {% is_active request 'auth_login' %}" href="{% url 'auth_login' %}">Login</a></li>
-                        <li class="nav-item"><a class="nav-link {% is_active request 'registration_register' %}" id="regnewuser" href="{% url 'registration_register' %}">Register</a></li>
-                    {% endif %}
-                    {% if user.is_authenticated %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Logged in as: {{ user.get_username }}
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="{% url 'auth_logout' %}">Logout</a>
-                                <a class="dropdown-item" href="{% url 'auth_password_change' %}">Password change</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{% url 'support' %}">Support</a>
-                            </div>
-                        </li>
-                    {% endif %}
-                </ul>
-            </div>
+            <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/Logo_MyMensor_NEW3.svg' %}" width="46" height="46" alt=""></a>
         </nav>
         <div class="container-fluid">
             {% block content %}{% endblock %}
