--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles i18n tz%}
+{% load staticfiles i18n tz cookielaw_tags%}
 {% localtime on %}
 {% get_current_timezone as TIME_ZONE %}
 <!DOCTYPE html>
@@ -6,7 +6,7 @@
 	<head>
 	    <!-- Basic Page Needs.
 	    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-		<meta charset="utf-8">
+        <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>
 			{% block title %}
@@ -22,19 +22,14 @@
 
 	    <!-- FONT
 	    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+	    <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic|Work+Sans:300,400,500,600' rel='stylesheet' type='text/css'>
 
 	    <!-- CSS
 	    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
-        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" >
-        <link rel="stylesheet" href="{% static 'css/daterangepicker.css' %}" >
+        <link rel="stylesheet" href="{% static 'css/toolkit-startup.css' %}" >
+        <link rel="stylesheet" href="{% static 'css/application-startup.css' %}" >
         <link rel="stylesheet" href="{% static 'css/cookielaw.css' %}" >
-        <link rel="stylesheet" href="{% static 'css/chosen.css' %}" >
-        <link rel="stylesheet" href="{% static 'css/leaflet.css' %}" >
         <link rel="stylesheet" href="{% static 'css/social-share-kit.css' %}" >
-        <link rel="stylesheet" href="{% static 'django_tables2/bootstrap.css' %}" />
-        <link rel="stylesheet" href="{% static 'css/mymensorstyle.css' %}" >
         <!-- Favicon
 	    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
@@ -45,28 +40,17 @@
         <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
         <meta name="msapplication-config" content="images/browserconfig.xml">
         <meta name="theme-color" content="#00afef">
+        {% cookielaw_banner %}
 		{% block header %}{% endblock %}
 	</head>
-
     <body>
-        <nav class="navbar fixed-top navbar-toggleable-md navbar-light" style="background-color: #e3f2fd;" id="myNavbar">
-            <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/Logo_MyMensor_NEW3.svg' %}" width="46" height="46" alt=""></a>
-        </nav>
-        <div class="container-fluid">
-            {% block content %}{% endblock %}
-            {% block footer %}{% endblock %}
-        </div><!-- /.container -->
+        {% block content %}{% endblock %}
+        {% block footer %}{% endblock %}
         <script src="{% static "js/jquery-3.1.1.min.js" %}"></script>
         <script src="{% static "js/tether.min.js" %}"></script>
-        <script src="{% static "js/bootstrap.min.js" %}"></script>
-        <script src="{% static "js/moment.min.js" %}"></script>
-        <script src="{% static "js/daterangepicker.js" %}"></script>
-        <script src="{% static "js/chosen.jquery.min.js" %}"></script>
-        <script src="{% static "js/mymensor-jquery.js" %}"></script>
-        <script src="{% static "js/cookielaw.js" %}"></script>
+        <script src="{% static "js/tether.min.js" %}"></script>
+        <script src="{% static "js/toolkit.js" %}"></script>
+        <script src="{% static "js/application.js" %}"></script>
         <script src="{% static "js/social-share-kit.js" %}"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="{% static "js/ie10-viewport-bug-workaround.js" %}"></script>
