--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -50,6 +50,7 @@
         <script src="{% static "js/tether.min.js" %}"></script>
         <script src="{% static "js/toolkit.js" %}"></script>
         <script src="{% static "js/application.js" %}"></script>
+        <script src="{% static "js/cookielaw.js" %}"></script>
         <script src="{% static "js/social-share-kit.js" %}"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="{% static "js/ie10-viewport-bug-workaround.js" %}"></script>
