--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load staticfiles i18n tz cookielaw_tags%}
+{% load staticfiles i18n tz cookielaw_tags %}
 {% localtime on %}
     {% get_current_timezone as TIME_ZONE %}
     {% block title %}{{ block.super }}{% endblock %}
@@ -49,9 +49,7 @@
 
         <div class="stage" id="stage">
 
-            <div class="block block-inverse block-fill-height app-header"
-                 style="background-image: url(assets/img/startup-1.jpg);">
-
+            <div class="block block-inverse block-fill-height app-header">
                 <div class="container py-4 fixed-top app-navbar">
                     <nav class="navbar navbar-transparent navbar-padded navbar-toggleable-sm">
                         <button
@@ -64,7 +62,7 @@
                         </button>
 
                         <a class="navbar-brand mr-auto" href="">
-                            <strong style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">go</strong>
+                            <strong style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">MyMensor</strong>
                         </a>
 
                         <div class="hidden-sm-down text-uppercase">
@@ -86,21 +84,54 @@
                     </nav>
                 </div>
 
-
-                <img class="app-graph" src="assets/img/startup-0.svg">
-
-                <div class="block-xs-middle pb-5">
+                <div class="block-foreground block-xs-middle pb-5">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-10 col-lg-6">
-                                <h1 class="block-titleData frequency">Analytics on demand.</h1>
-                                <p class="lead mb-4 text-muted">Stop installing bloated scripts that all track the exact
-                                    same things. Install one that does everything.</p>
-                                <button class="btn btn-primary btn-lg">Try it now</button>
+                                <h1 class="block-titleData frequency">{% trans "Controle simples e evidenciado." %}</h1>
+                                <p class="lead mb-4 text-muted">{% trans "Use imagens e controle tudo à distância usando um smartphone Android." %}</p>
+                                <button class="btn btn-primary btn-lg">{% trans "Experimente Já" %}</button>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="block-background">
+                    <div id="carousel-example-generic-2" class="carousel carousel-light slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic-2" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic-2" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic-2" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img class="d-block img-fluid" src="http://placehold.it/1440x832/333/fff"
+                                     alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="http://placehold.it/1440x832/333/fff"
+                                     alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="http://placehold.it/1440x832/333/fff"
+                                     alt="Third slide">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carousel-example-generic-2" role="button"
+                           data-slide="prev">
+                            <span class="icon icon-chevron-thin-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel-example-generic-2" role="button"
+                           data-slide="next">
+                            <span class="icon icon-chevron-thin-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+
+
+                </div>
+
             </div>
 
             <div class="block block-secondary app-iphone-block">
@@ -112,20 +143,19 @@
                         </div>
 
                         <div class="col-md-6 offset-md-1 col-sm-12 offset-sm-0">
-                            <h6 class="text-muted text-uppercase">Rich Information</h6>
-                            <h3>Make informed decisions with historical &amp; real time data.</h3>
-                            <p class="lead mb-4">We combine immediate real time events with rich historical data to help
-                                answer the toughest questions about retention, growth, and engagement.</p>
+                            <h6 class="text-muted text-uppercase">{% trans "Informação Certificada" %}</h6>
+                            <h3>{% trans "Transforme as imagens capturadas em informação certificada." %}</h3>
+                            <p class="lead mb-4">{% trans "Nós combinamos a mobilidade do smartphone com as tecnologias de bancos de dados e segurança para manter sua informação organizada e acessível." %}</p>
                             <div class="row hidden-md-down">
                                 <div class="col-sm-6 mb-3">
-                                    <h5>Data frequency</h5>
-                                    <p>We poll for data on a millisecond basis. You can react to new information in
-                                        seconds rather than days. <a href="#" class="text-primary">Learn more.</a></p>
+                                    <h5>{% trans "Tempo Real" %}</h5>
+                                    <p>{% trans "As capturas chegam para a sua visualização imediatamente após ocorrerem. Você pode reagir imediatamente, sem precisar esperar que alguém lhe envie a informação." %}<a
+                                            href="#" class="text-primary">{% trans "Veja aqui." %}</a></p>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Reliability &amp; uptime</h5>
-                                    <p>We process our data across a massively distributed network of reliable servers to
-                                        ensure 99.99% uptime, always. <a href="#" class="text-primary">Learn more</a>.
+                                    <h5>{% trans "Confiabilidade e Segurança" %}</h5>
+                                    <p>{% trans "Nós utilizamos servidores de classe mundial, mantendo confiabilidade e segurança de primeiro escalão." %}<a
+                                            href="#" class="text-primary">{% trans "Veja aqui." %}</a>.
                                     </p>
                                 </div>
                             </div>
@@ -139,33 +169,15 @@
                 <div class="container">
                     <div class="row app-align-center">
                         <div class="col-md-5 push-md-7">
-        <pre class="app-code">
-<span>1</span> <span>goAnalytics</span> “who are the latest 3 users?”
-<span>2</span>
-<span>3</span>  {
-<span>4</span>    "Dave": {
-<span>5</span>      "fullName": "Dave Gamache",
-<span>6</span>      "twitterHandle": "@dhg",
-<span>7</span>    }
-<span>8</span>    "Mark": {
-<span>9</span>      "fullName": "Mark Otto",
-<span>10</span>      "twitterHandle": "@mdo",
-<span>11</span>    }
-<span>12</span>    "Jacob": {
-<span>13</span>      "fullName": "Jacob Thornton",
-<span>14</span>      "twitterHandle": "@fat",
-<span>15</span>    }
-<span>16</span>  }</pre>
+
                         </div>
 
                         <div class="col-md-6 pull-md-5">
-                            <h6 class="text-muted text-uppercase">Easy development</h6>
-                            <h3>Natural language queries make mining data easy for anyone.</h3>
-                            <p class="lead mb-4 text-muted">Rather than force everyone at your company to learn
-                                incredibly difficult terminal commands, we allow anyone to query the data with natural
-                                language to return data.</p>
+                            <h6 class="text-muted text-uppercase">{% trans "Controle Simplificado" %}</h6>
+                            <h3>{% trans "Revolucione a sua forma de controlar. Trabalhe com portabilidade da informação e da realidade." %}</h3>
+                            <p class="lead mb-4 text-muted">{% trans "Usando a nossa aplicação web você tem acesso a toda a sua informação em qualquer lugar e a qualquer hora. A realidade será portátil para você podendo ser transportada onde você esteja." %}</p>
                             <button class="btn btn-secondary btn-lg btn-borderless">
-                                Read our docs
+                                {% trans "Leia nossos docs" %}
                             </button>
                         </div>
                     </div>
@@ -177,22 +189,11 @@
                 <div class="container">
                     <div class="row app-align-center py-3">
                         <div class="col-sm-5 push-sm-7 py-5">
-                            <h6 class="text-muted text-uppercase mb-2">High Praise</h6>
-                            <h3 class="mb-4">“Go Analytics is amazing. Decisions that used to take weeks, now only takes
-                                minutes and is available to everyone on my team.”</h3>
-                            <p class="mb-4 text-muted">Cindy Smith, founder of Cool Startup</p>
+                            <h6 class="text-muted text-uppercase">{% trans "Divulgação Simplificada" %}</h6>
+                            <h3>{% trans "Distribua as capturas automaticamente através do seu Twitter e do seu Email." %}</h3>
+                            <p class="lead mb-4 text-muted">{% trans "Divulgue o seu trabalho com a confiabilidade da certificação MyMensor. Seus clientes e amigos podem verificar facilmente o local e a data da captura da mídia, sem necessidade de possuírem uma assinatura MyMensor." %}</p>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="block app-ribbon py-5">
-                <div class="container text-xs-center">
-                    <img src="assets/img/startup-4.svg">
-                    <img src="assets/img/startup-5.svg">
-                    <img src="assets/img/startup-6.svg">
-                    <img src="assets/img/startup-7.svg">
-                    <img src="assets/img/startup-8.svg">
                 </div>
             </div>
 
@@ -201,39 +202,49 @@
 
                     <div class="row mb-5">
                         <div class="col-xs-10 offset-xs-1 col-sm-8 offset-sm-2 col-lg-6 offset-lg-3">
-                            <h6 class="text-muted text-uppercase mb-2">Inside the machine</h6>
-                            <h3 class="mb-4">It’s not hard to see how we make your life easier every day.</h3>
+                            <h6 class="text-muted text-uppercase mb-2">{% trans "Por dentro do MyMensor" %}</h6>
+                            <h3 class="mb-4">{% trans "É fácil ver como nós fazemos a sua vida mais eficiente todos os dias." %}</h3>
                         </div>
                     </div>
 
                     <div class="row app-marketing-grid">
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="assets/img/startup-9.svg">
-                            <p><strong>24/7 support.</strong> We’re always here for you no matter what time of day.</p>
+                            <p>
+                                <strong>{% trans "Realidade aumentada" %}</strong>{% trans "Capture a imagem sempre da mesma posição." %}
+                            </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="assets/img/startup-10.svg">
-                            <p><strong>E-commerce.</strong> We automatically handle all sales analytics.</p>
+                            <p>
+                                <strong>{% trans "Certificação" %}</strong>{% trans "Nós automaticamente certificamos tempo e local das imagens." %}
+                            </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="assets/img/startup-11.svg">
-                            <p><strong>Turnaround.</strong> Our data analysis is distributed, so it processes in
-                                seconds.</p>
+                            <p>
+                                <strong>{% trans "Divulgação" %}</strong>{% trans "Nós divulgamos automaticamente e imediatamente as suas capturas" %}
+                            </p>
                         </div>
                     </div>
 
                     <div class="row app-marketing-grid">
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="assets/img/startup-12.svg">
-                            <p><strong>Rich calculations.</strong> Limitless ways to splice and dice your data.</p>
+                            <p><strong>{% trans "Banco de Dados" %}</strong>{% trans "Todos os dados em segurança." %}
+                            </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
-                            <img class="mb-1" src="assets/img/startup-13.svg">
-                            <p><strong>Mobile apps.</strong> iOS and Android apps available for monitoring.</p>
+                            <img class="mb-1" src="{% static "images/startup-13.svg" %}">
+                            <p>
+                                <strong>{% trans "Aplicação móvel" %}</strong>{% trans "Aplicação Android para a captura de imagens" %}
+                            </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
-                            <img class="mb-1" src="assets/img/startup-14.svg">
-                            <p><strong>Secure connections.</strong> Every single request is routed through HTTPS.</p>
+                            <img class="mb-1" src="{% static "images/startup-14.svg" %}">
+                            <p>
+                                <strong>{% trans "Conexões seguras" %}</strong>{% trans "Cada transmissão é sempre feita em HTTPS." %}
+                            </p>
                         </div>
                     </div>
                 </div>
