--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="{% static 'css/application-startup.css' %}" >
         <link rel="stylesheet" href="{% static 'css/cookielaw.css' %}" >
         <link rel="stylesheet" href="{% static 'css/social-share-kit.css' %}" >
+        <link rel="stylesheet" href="{% static 'css/mymwebsitestyle.css' %}" >
         <!-- Favicon
 	    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
