--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -89,7 +89,7 @@
                         <div class="row">
                             <div class="col-sm-10 col-lg-6">
                                 <h1 class="block-titleData frequency">{% trans "Controle simples e evidenciado." %}</h1>
-                                <p class="lead mb-4 text-muted">{% trans "Use imagens e controle tudo à distância usando um smartphone Android." %}</p>
+                                <p class="lead mb-4 text-muted">{% trans "Use imagens e controle tudo à distância <br> usando um smartphone Android." %}</p>
                                 <button class="btn btn-primary btn-lg">{% trans "Experimente Já" %}</button>
                             </div>
                         </div>
@@ -105,16 +105,22 @@
                         </ol>
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
-                                <img class="d-block img-fluid" src="http://placehold.it/1440x832/333/fff"
-                                     alt="First slide">
+                                <div class="fill">
+                                    <img class="d-block img-fluid" src="{% static 'images/carousel01.jpg' %}"
+                                         alt="First slide">
+                                </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block img-fluid" src="http://placehold.it/1440x832/333/fff"
-                                     alt="Second slide">
+                                <div class="fill">
+                                    <img class="d-block img-fluid" src="{% static 'images/carousel02.jpg' %}"
+                                         alt="First slide">
+                                </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block img-fluid" src="http://placehold.it/1440x832/333/fff"
-                                     alt="Third slide">
+                                <div class="fill">
+                                    <img class="d-block img-fluid" src="{% static 'images/carousel01.jpg' %}"
+                                         alt="First slide">
+                                </div>
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carousel-example-generic-2" role="button"
@@ -364,5 +370,12 @@
             </div>
 
         </div>
+    {% endblock %}
+    {% block javascript %}
+        <script type="text/javascript">
+            $('.carousel').carousel({
+                interval: 5000
+            })
+        </script>
     {% endblock %}
 {% endlocaltime %}
