--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -101,7 +101,6 @@
                         <ol class="carousel-indicators">
                             <li data-target="#carousel-example-generic-2" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-example-generic-2" data-slide-to="1"></li>
-                            <li data-target="#carousel-example-generic-2" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
@@ -113,13 +112,7 @@
                             <div class="carousel-item">
                                 <div class="fill">
                                     <img class="d-block img-fluid" src="{% static 'images/carousel02.jpg' %}"
-                                         alt="First slide">
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="fill">
-                                    <img class="d-block img-fluid" src="{% static 'images/carousel01.jpg' %}"
-                                         alt="First slide">
+                                         alt="Second slide">
                                 </div>
                             </div>
                         </div>
