--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -88,9 +88,9 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-10 col-lg-6">
-                                <h1 class="block-titleData frequency">{% trans "Controle simples e evidenciado." %}</h1>
-                                <p class="lead mb-4 text-muted">{% trans "Use imagens e controle tudo à distância <br> usando um smartphone Android." %}</p>
-                                <button class="btn btn-primary btn-lg">{% trans "Experimente Já" %}</button>
+                                <h1 class="block-titleData frequency">{% trans "Simple and evidenced control." %}</h1>
+                                <p class="lead mb-4 text-muted">{% trans " Use images to control everything remotely <br> using an Android smartphone." %}</p>
+                                <button class="btn btn-primary btn-lg">{% trans "Try Now" %}</button>
                             </div>
                         </div>
                     </div>
@@ -142,23 +142,24 @@
                         </div>
 
                         <div class="col-md-6 offset-md-1 col-sm-12 offset-sm-0">
-                            <h6 class="text-muted text-uppercase">{% trans "Informação Certificada" %}</h6>
-                            <h3>{% trans "Transforme as imagens capturadas em informação certificada." %}</h3>
-                            <p class="lead mb-4">{% trans "Nós combinamos a mobilidade do smartphone com as tecnologias de bancos de dados e segurança para manter sua informação organizada e acessível." %}</p>
+                            <h6 class="text-muted text-uppercase">{% trans "Certified Information" %}</h6>
+                            <h3>{% trans "Turn captured images into certified information." %}</h3>
+                            <p class="lead mb-4">{% trans "We combine smartphone mobility with database and security technologies to keep your information organized and accessible." %}</p>
                             <div class="row hidden-md-down">
                                 <div class="col-sm-6 mb-3">
-                                    <h5>{% trans "Tempo Real" %}</h5>
-                                    <p>{% trans "As capturas chegam para a sua visualização imediatamente após ocorrerem. Você pode reagir imediatamente, sem precisar esperar que alguém lhe envie a informação." %}<a
-                                            href="#" class="text-primary">{% trans "Veja aqui." %}</a></p>
+                                    <h5>{% trans "Real Time" %}</h5>
+                                    <p>{% trans "The captures come to your view immediately after they occur. You can react immediately, without waiting for someone to send you the information." %}<a
+                                            href="#" class="text-primary">{% trans "See here." %}</a></p>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>{% trans "Confiabilidade e Segurança" %}</h5>
-                                    <p>{% trans "Nós utilizamos servidores de classe mundial, mantendo confiabilidade e segurança de primeiro escalão." %}<a
-                                            href="#" class="text-primary">{% trans "Veja aqui." %}</a>.
+                                    <h5>{% trans "Reliability and Safety " %}</h5>
+                                    <p>{% trans " We use world-class servers, maintaining first-class reliability and security." %}<a
+                                            href="#" class="text-primary">{% trans "See here." %}</a>.
                                     </p>
                                 </div>
                             </div>
                         </div>
+
                     </div>
 
                 </div>
