--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -171,13 +171,12 @@
                         <div class="col-md-5 push-md-7">
 
                         </div>
-
                         <div class="col-md-6 pull-md-5">
-                            <h6 class="text-muted text-uppercase">{% trans "Controle Simplificado" %}</h6>
-                            <h3>{% trans "Revolucione a sua forma de controlar. Trabalhe com portabilidade da informação e da realidade." %}</h3>
-                            <p class="lead mb-4 text-muted">{% trans "Usando a nossa aplicação web você tem acesso a toda a sua informação em qualquer lugar e a qualquer hora. A realidade será portátil para você podendo ser transportada onde você esteja." %}</p>
+                            <h6 class="text-muted text-uppercase">{% trans "Control Made Simple" %}</h6>
+                            <h3>{% trans "Revolutionize your control practices. Work with portability of information and reality." %}</h3>
+                            <p class="lead mb-4 text-muted">{% trans "Using our web application you have access to all your information anywhere, anytime. The reality will be portable for you to be transported to wherever you are." %}</p>
                             <button class="btn btn-secondary btn-lg btn-borderless">
-                                {% trans "Leia nossos docs" %}
+                                {% trans "Read our docs" %}
                             </button>
                         </div>
                     </div>
@@ -189,9 +188,9 @@
                 <div class="container">
                     <div class="row app-align-center py-3">
                         <div class="col-sm-5 push-sm-7 py-5">
-                            <h6 class="text-muted text-uppercase">{% trans "Divulgação Simplificada" %}</h6>
-                            <h3>{% trans "Distribua as capturas automaticamente através do seu Twitter e do seu Email." %}</h3>
-                            <p class="lead mb-4 text-muted">{% trans "Divulgue o seu trabalho com a confiabilidade da certificação MyMensor. Seus clientes e amigos podem verificar facilmente o local e a data da captura da mídia, sem necessidade de possuírem uma assinatura MyMensor." %}</p>
+                            <h6 class="text-muted text-uppercase">{% trans "Simplified Sharing" %}</h6>
+                            <h3>{% trans " Share captures automatically via Facebook, Twitter and Email." %}</h3>
+                            <p class="lead mb-4 text-muted">{% trans " Promote your work with the reliability of the MyMensor certification. Your customers and friends can easily check the location and date of the media capture, even without a MyMensor subscription." %}</p>
                         </div>
                     </div>
                 </div>
@@ -202,10 +201,11 @@
 
                     <div class="row mb-5">
                         <div class="col-xs-10 offset-xs-1 col-sm-8 offset-sm-2 col-lg-6 offset-lg-3">
-                            <h6 class="text-muted text-uppercase mb-2">{% trans "Por dentro do MyMensor" %}</h6>
-                            <h3 class="mb-4">{% trans "É fácil ver como nós fazemos a sua vida mais eficiente todos os dias." %}</h3>
+                            <h6 class="text-muted text-uppercase mb-2">{% trans "Inside MyMensor" %}</h6>
+                            <h3 class="mb-4">{% trans "It's easy to see how we make your life more efficient every day." %}</h3>
                         </div>
                     </div>
+
 
                     <div class="row app-marketing-grid">
                         <div class="col-md-4 px-4 mb-5">
