--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -211,22 +211,23 @@
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="assets/img/startup-9.svg">
                             <p>
-                                <strong>{% trans "Realidade aumentada" %}</strong>{% trans "Capture a imagem sempre da mesma posição." %}
+                                <strong>{% trans "Augmented Reality" %}</strong>{% trans " Capture the image always in the same position. (Available only with MyMensorAR Mobile app)" %}
                             </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="assets/img/startup-10.svg">
                             <p>
-                                <strong>{% trans "Certificação" %}</strong>{% trans "Nós automaticamente certificamos tempo e local das imagens." %}
+                                <strong>{% trans "Certification" %}</strong>{% trans "We automatically certify time and location of the images." %}
                             </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="assets/img/startup-11.svg">
                             <p>
-                                <strong>{% trans "Divulgação" %}</strong>{% trans "Nós divulgamos automaticamente e imediatamente as suas capturas" %}
+                                <strong>{% trans "Sharing" %}</strong>{% trans " We automatically and immediately share your captures." %}
                             </p>
                         </div>
                     </div>
+
 
                     <div class="row app-marketing-grid">
                         <div class="col-md-4 px-4 mb-5">
