--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -232,22 +232,24 @@
                     <div class="row app-marketing-grid">
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="assets/img/startup-12.svg">
-                            <p><strong>{% trans "Banco de Dados" %}</strong>{% trans "Todos os dados em segurança." %}
+                            <p>
+                                <strong>{% trans "Database" %}</strong>{% trans " All data safe. (Available only with MyMensorAR)" %}
                             </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="{% static "images/startup-13.svg" %}">
                             <p>
-                                <strong>{% trans "Aplicação móvel" %}</strong>{% trans "Aplicação Android para a captura de imagens" %}
+                                <strong>{% trans "Mobile Application" %}</strong>{% trans "Android app for capturing images." %}
                             </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="{% static "images/startup-14.svg" %}">
                             <p>
-                                <strong>{% trans "Conexões seguras" %}</strong>{% trans "Cada transmissão é sempre feita em HTTPS." %}
+                                <strong>{% trans " Secure connections " %}</strong>{% trans " Each transmission is always done in HTTPS." %}
                             </p>
                         </div>
                     </div>
+
                 </div>
             </div>
 
