--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -211,7 +211,7 @@
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="assets/img/startup-9.svg">
                             <p>
-                                <strong>{% trans "Augmented Reality" %}</strong>{% trans " Capture the image always in the same position. (Available only with MyMensorAR Mobile app)" %}
+                                <strong>{% trans "Augmented Reality" %}</strong>{% trans " Capture the image always in the same position. (Available only with MyMensorAR)" %}
                             </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
@@ -266,55 +266,61 @@
                     <div class="row">
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2 mb-2">
-                                <h6 class="text-muted text-uppercase mb-4">Personal</h6>
+                                <h6 class="text-muted text-uppercase mb-4">MyMensor</h6>
                                 <img class="mb-4" src="assets/img/startup-15.svg">
-                                <p class="pb-2">Plenty of processing power for any personal projects, big or small.</p>
+                                <p class="pb-2">Even simpler. For those that just need the certification and sharing power.</p>
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>10k</strong> monthly requests</li>
-                                <li class="py-4"><strong>9am-5pm</strong> technical supprt</li>
-                                <li class="py-4"><strong>Public</strong> API access</li>
+                                <li class="py-4"><strong>Certification</strong> time and location</li>
+                                <li class="py-4"><strong>Sharing</strong> automatic sharing to Facebook, Twitter and Email.</li>
+                                <li class="py-4"><strong>Secure</strong> all HTTPS</li>
                             </ul>
 
                             <button class="btn btn-lg btn-primary btn-block">
-                                Start <span class="hidden-lg-down">a personal account</span>
+                                Coming <span class="hidden-lg-down">SOON</span>
                             </button>
                         </div>
 
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2">
-                                <h6 class="text-muted text-uppercase mb-4">Business</h6>
+                                <h6 class="text-muted text-uppercase mb-4">MyMensorAR</h6>
                                 <img class="mb-4" src="assets/img/startup-16.svg">
-                                <p class="pb-2">The perfect sized plan for small businesses to get started.</p>
+                                <p class="pb-2">The one size fits all solution. Use Augmented Reality and Data Features to control your personal and business projects</p>
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>100k</strong> monthly requests</li>
-                                <li class="py-4"><strong>24/7</strong> technical supprt</li>
-                                <li class="py-4"><strong>Public</strong> API access</li>
+                                <li class="py-4"><strong>Certification</strong> time and location</li>
+                                <li class="py-4"><strong>Sharing</strong> automatic sharing to Facebook, Twitter and Email.</li>
+                                <li class="py-4"><strong>Secure</strong> all HTTPS</li>
+                                <li class="py-4"><strong>AR</strong> automatic and precise captures</li>
+                                <li class="py-4"><strong>Databse</strong> build your own bigdata</li>
                             </ul>
 
                             <button class="btn btn-lg btn-primary btn-block">
-                                Start <span class="hidden-lg-down">a business account</span>
+                                Start <span class="hidden-lg-down">MyMensorAR account</span>
                             </button>
                         </div>
 
                         <div class="col-md-4 px-4 pb-1 mb-5">
                             <div class="px-2">
-                                <h6 class="text-muted text-uppercase mb-4">Corporate</h6>
+                                <h6 class="text-muted text-uppercase mb-4">MyMensorCorp</h6>
                                 <img class="mb-4" src="assets/img/startup-17.svg">
                                 <p class="pb-2">An unlimited plan that will scale infinitely to any size project.</p>
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>Unlimited</strong> monthly requests</li>
-                                <li class="py-4"><strong>24/7</strong> technical supprt</li>
-                                <li class="py-4"><strong>Public &amp; Private</strong> API access</li>
+                                <li class="py-4"><strong>Certification</strong> time and location</li>
+                                <li class="py-4"><strong>Sharing</strong> automatic sharing to Facebook, Twitter and Email.</li>
+                                <li class="py-4"><strong>Secure</strong> all HTTPS</li>
+                                <li class="py-4"><strong>AR</strong> automatic and precise captures</li>
+                                <li class="py-4"><strong>Databse</strong> feed your corporate bigdata</li>
+                                <li class="py-4"><strong>API access</strong> upon request</li>
+                                <li class="py-4"><strong>Mobile App</strong> custom setups</li>
                             </ul>
 
                             <button class="btn btn-lg btn-primary btn-block">
-                                Start <span class="hidden-lg-down">a corporate account</span>
+                                Coming <span class="hidden-lg-down">SOON</span>
                             </button>
                         </div>
                     </div>
