--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -13,8 +13,8 @@
 				MyMensor
 			{% endblock %}
 		</title>
-	    <meta name="MyMensor WebApp" content="">
-	    <meta name="SeaMate" content="">
+	    <meta name="MyMensor Website" content="">
+	    <meta name="Celtapps" content="">
 
 	    <!-- Mobile Specific Metas
 	    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -51,7 +51,6 @@
         <script src="{% static "js/tether.min.js" %}"></script>
         <script src="{% static "js/toolkit.js" %}"></script>
         <script src="{% static "js/application.js" %}"></script>
-        <script src="{% static "js/cookielaw.js" %}"></script>
         <script src="{% static "js/social-share-kit.js" %}"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="{% static "js/ie10-viewport-bug-workaround.js" %}"></script>
