--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -58,9 +58,8 @@
             <div id="navbarNavDropdown" class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">{% trans "Home" %}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">{% trans "Media" %}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Login</a></li>
-                    <li class="nav-item"><a class="nav-link" id="regnewuser" href="{% url 'index' %}">Register</a>
+                    <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/accounts/login/">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/accounts/register/">Register</a>
                     </li>
                 </ul>
             </div>
