--- a/mymwebsite/templates/terms.html
+++ b/mymwebsite/templates/terms.html
@@ -163,7 +163,7 @@
         each such website.</p>
     <h4 class="text-info text-uppercase">LIMITATION OF LIABILITY</h4>
     <p class="text-justify">(a) Warranty Disclaimer: THE SITE AND, SITE CONTENT AND THE SERVICE ARE PROVIDED STRICTLY ON
-        AN “AS IS” AND “AS AVAILABLE” BASIS, AND MYMENSOR MAKES NO WARRANTY THAT THE SITE, SERVICE OR SITE CONENT ARE
+        AN “AS IS” AND “AS AVAILABLE” BASIS, AND MYMENSOR MAKES NO WARRANTY THAT THE SITE, SERVICE OR SITE CONTENT ARE
         COMPLETE, SUITABLE FOR YOUR PURPOSE, OR ACCURATE. ON BEHALF OF ITSELF AND ITS LICENSORS, MYMENSOR HEREBY
         EXPRESSLY DISCLAIMS ANY AND ALL IMPLIED, STATUTORY OR OTHER WARRANTIES WITH RESPECT TO THE SITE, SITE CONTENT
         AND SERVICE, OR THE AVAILABILITY OF THE FOREGOING, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
